[package]
name = "wialon_sdk"
version = "0.0.5"
edition = "2018"
description = "wialon GPS"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.16", features = ["blocking"] }
serde = { version = "*", features = ["derive"] }
serde_json = "1.0.95"
regex = "1.7.3"